--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,22 @@
-[project]
+[tool.poetry]
 name = "goit-pythonweb-hw-06"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "i.yanchyk",email = "i.yanchyk@steel.mil.ua"}
-]
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "psycopg2 (>=2.9.10,<3.0.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)",
-    "alembic (>=1.15.2,<2.0.0)"
-]
+authors = ["i.yanchyk <i.yanchyk@steel.mil.ua>"]
 
-[tool.poetry]
-packages = [{include = "goit_pythonweb_hw_06", from = "src"}]
+[tool.poetry.dependencies]
+python = "^3.12"
+psycopg2 = "^2.9.10"
+python-dotenv = "^1.1.0"
+alembic = "^1.15.2"
 
+[tool.poetry.dev-dependencies]
+pytest = "^5.2"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.packages]]
+include = "goit_pythonweb_hw_06"
+from = "src"
